@@ -1,11 +1,11 @@
 %Warning-UNUSED: t/t_lint_once_bad.v:19:14: Signal is not driven, nor used: 'unus1'
-                                          : ... In instance t.sub3
+                                          : ... In instance t.sub1
    19 |    reg [A:0] unus1;    reg [A:0] unus2;
       |              ^~~~~
                  ... For warning description see https://verilator.org/warn/UNUSED?v=latest
                  ... Use "/* verilator lint_off UNUSED */" and lint_on around source to disable this message.
 %Warning-UNUSED: t/t_lint_once_bad.v:19:34: Signal is not driven, nor used: 'unus2'
-                                          : ... In instance t.sub3
+                                          : ... In instance t.sub1
    19 |    reg [A:0] unus1;    reg [A:0] unus2;
       |                                  ^~~~~
 %Error: Exiting due to
