@@ -1,5 +1,5 @@
 %Warning-WIDTH: t/t_lint_repeat_bad.v:18:17: Operator ASSIGNW expects 1 bits on the Assign RHS, but Assign RHS's VARREF 'a' generates 2 bits.
-                                           : ... In instance t.sub2
+                                           : ... In instance t.sub3
    18 |    wire [0:0] b = a;
       |                 ^
                 ... For warning description see https://verilator.org/warn/WIDTH?v=latest
