@@ -106,7 +106,7 @@
       </topscope>
     </module>
     <typetable loc="a,0,0,0,0">
-      <basicdtype loc="d,48,10,48,13" id="1" name="logic"/>
+      <basicdtype loc="d,34,24,34,27" id="1" name="logic"/>
       <basicdtype loc="d,14,10,14,11" id="2" name="logic" left="3" right="0"/>
       <basicdtype loc="d,19,18,19,19" id="3" name="logic" left="31" right="0" signed="true"/>
     </typetable>
